--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         </div>
         <div class="weather">
             <img src="./assets/images/cloud.png" alt="weather image" class="weather-icon">
-            <h1 class="temp">70°F</h1>
-            <h2 class="city">New York City</h2>
+            <h1 class="temp">°F</h1>
+            <h2 class="city">City</h2>
             <div class="details">
                 <div class="col">
                     <img src="./assets/images/fog.png" alt="humidityimage">
                     <div>
                         <p class="humidity">
-                            50%
+                            %
                         </p>
                         <p>
                             Humidity
@@ -36,7 +36,7 @@
                     <img src="./assets/images/wind.png" alt="windimage">
                     <div>
                         <p class="wind">
-                            5mph
+                            mph
                         </p>
                         <p>
                             Wind Speed
